objects/CMN_SharingEvent__e.object
<CustomObject>
    <fields>
        <fullName>CMN_IsCreate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether Share record is to be created or deleted</description>
        <label>isCreate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMN_ObjectName__c</fullName>
        <description>API name of the object to which the record belongs</description>
        <label>Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_PublicGroupId__c</fullName>
        <description>Public Group Id with which sharing has to be created</description>
        <label>Public Group Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_Record_Id__c</fullName>
        <description>Record for which sharing has to be created</description>
        <label>Record Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Sharing Event</label>
    <pluralLabel>Sharing Events</pluralLabel>
</CustomObject>